Phase 1: Java examples standalone & cross-platform via Maven
Replace the bash-only Java toolchain (tools/fetch-tools.sh + raw javac +
.lib/ ":"-classpaths + run-*.sh wrappers) with a standard Maven build so
every Java example runs on Windows too, with no prior tool step.

- Root pom.xml aggregator + committed Maven Wrapper (mvnw/mvnw.cmd,
  only-script, Maven 3.9.9) so no preinstalled Maven is needed.
- One module per example; <sourceDirectory> left at the existing flat
  example dirs so the teaching sources do not move. Dependency versions
  pinned to exactly what fetch-tools.sh used (behaviour unchanged). The
  SchXslt (bundled-Saxon) module is kept separate from the Saxon-HE
  XSLT/XQuery modules to preserve the org.xmlresolver-conflict fix.
- XsdValidate resolves the official XSD itself: $FUNDSXML_SCHEMA_DIR
  (offline/corporate escape hatch) -> .schema-cache/ -> download from the
  GitHub release (follows the 302, fetches the xmldsig sibling when
  imported). Source of truth stays the official release; no committed
  catalog.
- New XML_Signature/java/GenerateTestKey.java generates the throwaway
  signing key with the JDK's own keytool (no openssl) -> works on Windows.
- Deleted: tools/fetch-tools.sh, run-schematron.sh, run-transform.sh,
  run-xquery.sh, generate-test-key.sh.
- ci.yml: all Java steps now drive ./mvnw; exit codes propagate
  (blockSystemExit=false) so negative-fixture asserts still hold.
- Docs swept (READMEs / CONTRIBUTING / issue template / .gitignore) to the
  Maven Wrapper commands; not-yet-migrated Python/.NET reference comments
  no longer point at deleted scripts.

Verified locally via ./mvnw: XSD (env/cache/download + negative fixture),
Schematron (±), XSLT, XQuery, sign/verify/tamper, DB round-trip +
xml_equiv + XSD-valid, large-file streaming, data binding.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>